--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -55,24 +55,30 @@
 				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions="*,*,*,*,*">
 
-						<Grid ColumnDefinitions="*,*,*"  Grid.Row="0">
-							<TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" Text="{Binding Report.StartPeriod.Value}"/>
-							<CalendarDatePicker Classes="buttonOnly"  
-								Grid.Column="2"
-								SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"
-								Watermark="дд.мм.гггг"/>
+						<Grid ColumnDefinitions="*,*,*" Grid.Row="0">
+							<TextBlock Grid.Column="0"
+									   Margin="5,11"
+									   Text="Дата окончания предыдущего отчетного периода:"/>
+							<TextBox Grid.Column="1"
+									 Text="{Binding Report.StartPeriod.Value}"
+									 MinWidth="83"
+									 Watermark="дд.мм.гггг"/>
+							<CalendarDatePicker	Classes="buttonOnly"
+								                Grid.Column="2"
+								                SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
 						</Grid>
 
 						<Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
-							<TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" 
-								Margin="10.5,3,0,0"
-								Text="{Binding Report.EndPeriod.Value}"/>
-							<CalendarDatePicker Classes="buttonOnly" 
-								Grid.Column="2"
-								SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"
-								Watermark="дд.мм.гггг"/>
+							<TextBlock Grid.Column="0"
+									   Margin="5,13"
+									   Text="Дата окончания настоящего отчетного периода:"/>
+							<TextBox Grid.Column="1"
+									 Margin="11,3,0,0"
+									 Text="{Binding Report.EndPeriod.Value}"
+									 Watermark="дд.мм.гггг"/>
+							<CalendarDatePicker Classes="buttonOnly"
+								                Grid.Column="2"
+								                SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"								/>
 						</Grid>
 
 						<StackPanel  Orientation="Horizontal" Grid.Row="2">
@@ -208,8 +214,8 @@
 
 					<!--Первый уровень заголовков-->
 
-					<Border Grid.Column="0" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>№ п/п</TextBlock>
 					</Border>
 					<Border Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Сведения об операции</TextBlock>
@@ -217,8 +223,8 @@
 					<Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="7">
 						<TextBlock>Сведения об отработавших закрытых источниках ионизирующего излучения</TextBlock>
 					</Border>
-					<Border Grid.Column="10" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="10" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Статус РАО</TextBlock>
 					</Border>
 					<Border Grid.Column="11" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>Документ</TextBlock>
@@ -232,14 +238,14 @@
 					<Border Grid.Column="19" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Пункт хранения</TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="21" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Код переработки / сортировки РАО</TextBlock>
 					</Border>
-					<Border Grid.Column="22" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="22" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Субсидия, %</TextBlock>
 					</Border>
-					<Border Grid.Column="23" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="23" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Номер мероприятия ФЦП</TextBlock>
 					</Border>
 					<Border Grid.Column="24" Grid.Row="0">
 						<TextBlock>Договор</TextBlock>
@@ -247,8 +253,8 @@
 
 					<!--Второй уровень заголовков-->
 
-					<Border Grid.Column="0" Grid.Row="1">
-						<TextBlock>№ п/п</TextBlock>
+					<Border Grid.Column="0" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="1" Grid.Row="1">
 						<TextBlock>код</TextBlock>
@@ -257,7 +263,7 @@
 						<TextBlock>дата</TextBlock>
 					</Border>
 					<Border Grid.Column="3" Grid.Row="1">
-						<TextBlock>номер паспорта (сертификата) ЗРИ, акта определения характеристик ОЗИИ</TextBlock>
+						<TextBlock>номер паспорта (сертификата) ЗРИ, акта определения характеристик ОЗИИИ</TextBlock>
 					</Border>
 					<Border Grid.Column="4" Grid.Row="1">
 						<TextBlock>тип</TextBlock>
@@ -277,8 +283,8 @@
 					<Border Grid.Column="9" Grid.Row="1">
 						<TextBlock>дата выпуска</TextBlock>
 					</Border>
-					<Border Grid.Column="10" Grid.Row="1">
-						<TextBlock>Статус РАО</TextBlock>
+					<Border Grid.Column="10" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="11" Grid.Row="1">
 						<TextBlock>вид</TextBlock>
@@ -310,14 +316,14 @@
 					<Border Grid.Column="20" Grid.Row="1">
 						<TextBlock>код</TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="1">
-						<TextBlock>Код переработки / сортировки РАО</TextBlock>
+					<Border Grid.Column="21" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="22" Grid.Row="1">
-						<TextBlock>Субсидия, %</TextBlock>
+					<Border Grid.Column="22" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="23" Grid.Row="1">
-						<TextBlock>Номер мероприятия ФЦП</TextBlock>
+					<Border Grid.Column="23" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="24" Grid.Row="1">
 						<TextBlock>номер</TextBlock>
@@ -333,10 +339,10 @@
 					SelectedItem="{Binding SelectedForm}">
 
                     <interactivity:Interaction.Behaviors>
-						<local:DataGridDragSelectionBehavior/>
 						<local:DataGridPointerBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
+						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
 					</interactivity:Interaction.Behaviors>
 
 					<DataGrid.Columns>
@@ -867,8 +873,6 @@
 							  SelectedItem="{Binding SelectedNote}">
 
                         <interactivity:Interaction.Behaviors>
-							<local:DataGridDoubleClickBehavior/>
-							<local:DataGridDragSelectionBehavior/>
 							<local:DataGridPointerBehavior/>
 							<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
