--- a/Client_App/Views/Forms/Forms1/Form_16.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_16.axaml
@@ -55,24 +55,30 @@
 				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions="*,*,*,*,*">
 
-						<Grid ColumnDefinitions="*,*,*"  Grid.Row="0">
-							<TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" Text="{Binding Report.StartPeriod.Value}"/>
-							<CalendarDatePicker Classes="buttonOnly"  
-								Grid.Column="2"
-								SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"
-								Watermark="дд.мм.гггг"/>
+						<Grid ColumnDefinitions="*,*,*" Grid.Row="0">
+							<TextBlock Grid.Column="0"
+									   Margin="5,11"
+									   Text="Дата окончания предыдущего отчетного периода:"/>
+							<TextBox Grid.Column="1"
+									 Text="{Binding Report.StartPeriod.Value}"
+									 MinWidth="83"
+									 Watermark="дд.мм.гггг"/>
+							<CalendarDatePicker	Classes="buttonOnly"
+								                Grid.Column="2"
+								                SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
 						</Grid>
 
 						<Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
-							<TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" 
-								Margin="10.5,3,0,0"
-								Text="{Binding Report.EndPeriod.Value}"/>
-							<CalendarDatePicker Classes="buttonOnly" 
-								Grid.Column="2"
-								SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"
-								Watermark="дд.мм.гггг"/>
+							<TextBlock Grid.Column="0"
+									   Margin="5,13"
+									   Text="Дата окончания настоящего отчетного периода:"/>
+							<TextBox Grid.Column="1"
+									 Margin="11,3,0,0"
+									 Text="{Binding Report.EndPeriod.Value}"
+									 Watermark="дд.мм.гггг"/>
+							<CalendarDatePicker Classes="buttonOnly"
+								                Grid.Column="2"
+								                SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"								/>
 						</Grid>
 
 						<StackPanel  Orientation="Horizontal" Grid.Row="2">
@@ -201,32 +207,32 @@
 
 					<!--Первый уровень заголовков-->
 
-					<Border Grid.Column="0" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>№ п/п</TextBlock>
 					</Border>
 					<Border Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Сведения об операции</TextBlock>
 					</Border>
-					<Border Grid.Column="3" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="3" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Код РАО</TextBlock>
 					</Border>
-					<Border Grid.Column="4" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="4" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Статус РАО</TextBlock>
 					</Border>
 					<Border Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Количество</TextBlock>
 					</Border>
-					<Border Grid.Column="7" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="7" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Количество ОЗРИ, шт.</TextBlock>
 					</Border>
-					<Border Grid.Column="8" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="8" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Основные радионуклиды</TextBlock>
 					</Border>
 					<Border Grid.Column="9" Grid.Row="0" Grid.ColumnSpan="4">
 						<TextBlock>Суммарная активность, Бк</TextBlock>
 					</Border>
-					<Border Grid.Column="13" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="13" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Дата измерения активности</TextBlock>
 					</Border>
 					<Border Grid.Column="14" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>Документ</TextBlock>
@@ -237,17 +243,17 @@
 					<Border Grid.Column="19" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Пункт хранения</TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="21" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Код переработки / сортировки РАО</TextBlock>
 					</Border>
 					<Border Grid.Column="22" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>УКТ, упаковка или иная учетная единица</TextBlock>
 					</Border>
-					<Border Grid.Column="25" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="25" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Субсидия, %</TextBlock>
 					</Border>
-					<Border Grid.Column="26" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="26" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+						<TextBlock>Номер мероприятия ФЦП</TextBlock>
 					</Border>
 					<Border Grid.Column="27" Grid.Row="0">
 						<TextBlock>Документ</TextBlock>
@@ -255,8 +261,8 @@
 
 					<!--Второй уровень заголовков-->
 
-					<Border Grid.Column="0" Grid.Row="1">
-						<TextBlock>№ п/п</TextBlock>
+					<Border Grid.Column="0" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="1" Grid.Row="1">
 						<TextBlock>код</TextBlock>
@@ -264,11 +270,11 @@
 					<Border Grid.Column="2" Grid.Row="1">
 						<TextBlock>дата</TextBlock>
 					</Border>
-					<Border Grid.Column="3" Grid.Row="1">
-						<TextBlock>Код РАО</TextBlock>
+					<Border Grid.Column="3" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="4" Grid.Row="1">
-						<TextBlock>Статус РАО</TextBlock>
+					<Border Grid.Column="4" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="5" Grid.Row="1">
 						<TextBlock>объем без упаковки, куб.м</TextBlock>
@@ -276,11 +282,11 @@
 					<Border Grid.Column="6" Grid.Row="1">
 						<TextBlock>масса без упаковки (нетто), т</TextBlock>
 					</Border>
-					<Border Grid.Column="7" Grid.Row="1">
-						<TextBlock>Количество ОЗРИ, шт.</TextBlock>
+					<Border Grid.Column="7" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="8" Grid.Row="1">
-						<TextBlock>Основные радионуклиды</TextBlock>
+					<Border Grid.Column="8" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="9" Grid.Row="1">
 						<TextBlock>тритий</TextBlock>
@@ -294,8 +300,8 @@
 					<Border Grid.Column="12" Grid.Row="1">
 						<TextBlock>трансурановые радионуклиды</TextBlock>
 					</Border>
-					<Border Grid.Column="13" Grid.Row="1">
-						<TextBlock>Дата измерения активности</TextBlock>
+					<Border Grid.Column="13" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="14" Grid.Row="1">
 						<TextBlock>вид</TextBlock>
@@ -318,8 +324,8 @@
 					<Border Grid.Column="20" Grid.Row="1">
 						<TextBlock>код</TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="1">
-						<TextBlock>Код переработки / сортировки РАО</TextBlock>
+					<Border Grid.Column="21" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="22" Grid.Row="1">
 						<TextBlock>наименование</TextBlock>
@@ -330,11 +336,11 @@
 					<Border Grid.Column="24" Grid.Row="1">
                         <TextBlock>заводской номер</TextBlock>
                     </Border>
-					<Border Grid.Column="25" Grid.Row="1">
-						<TextBlock>Субсидия, %</TextBlock>
+					<Border Grid.Column="25" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="26" Grid.Row="1">
-						<TextBlock>Номер мероприятия ФЦП</TextBlock>
+					<Border Grid.Column="26" Grid.Row="1" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="27" Grid.Row="1">
 						<TextBlock>номер</TextBlock>
@@ -350,10 +356,10 @@
 					SelectedItem="{Binding SelectedForm}">
 
                     <interactivity:Interaction.Behaviors>
-						<local:DataGridDragSelectionBehavior/>
 						<local:DataGridPointerBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
+						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
 					</interactivity:Interaction.Behaviors>
 
 					<DataGrid.Columns>
@@ -935,8 +941,6 @@
 							  SelectedItem="{Binding SelectedNote}">
 
                         <interactivity:Interaction.Behaviors>
-							<local:DataGridDoubleClickBehavior/>
-							<local:DataGridDragSelectionBehavior/>
 							<local:DataGridPointerBehavior/>
 							<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
