--- a/Client_App/Views/Forms/Forms1/Form_18.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_18.axaml
@@ -57,24 +57,30 @@
 				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions="*,*,*,*,*">
 
-						<Grid ColumnDefinitions="*,*,*"  Grid.Row="0">
-							<TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" Text="{Binding Report.StartPeriod.Value}"/>
-							<CalendarDatePicker Classes="buttonOnly"  
-								Grid.Column="2"
-								SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"
-								Watermark="дд.мм.гггг"/>
+						<Grid ColumnDefinitions="*,*,*" Grid.Row="0">
+							<TextBlock Grid.Column="0"
+									   Margin="5,11"
+									   Text="Дата окончания предыдущего отчетного периода:"/>
+							<TextBox Grid.Column="1"
+									 Text="{Binding Report.StartPeriod.Value}"
+									 MinWidth="83"
+									 Watermark="дд.мм.гггг"/>
+							<CalendarDatePicker	Classes="buttonOnly"
+								                Grid.Column="2"
+								                SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
 						</Grid>
 
 						<Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
-							<TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" 
-								Margin="10.5,3,0,0"
-								Text="{Binding Report.EndPeriod.Value}"/>
-							<CalendarDatePicker Classes="buttonOnly" 
-								Grid.Column="2"
-								SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"
-								Watermark="дд.мм.гггг"/>
+							<TextBlock Grid.Column="0"
+									   Margin="5,13"
+									   Text="Дата окончания настоящего отчетного периода:"/>
+							<TextBox Grid.Column="1"
+									 Margin="11,3,0,0"
+									 Text="{Binding Report.EndPeriod.Value}"
+									 Watermark="дд.мм.гггг"/>
+							<CalendarDatePicker Classes="buttonOnly"
+								                Grid.Column="2"
+								                SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"								/>
 						</Grid>
 
 						<StackPanel  Orientation="Horizontal" Grid.Row="2">
@@ -195,7 +201,7 @@
 				<Grid Classes="tableHeader" Grid.Row="0"
 					  Width="{Binding ElementName=dataGrid.Width}"
                       ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*"
-                      RowDefinitions="Auto,Auto">
+                      RowDefinitions="Auto,Auto,Auto">
 
                     <interactivity:Interaction.Behaviors>
 						<local:ColumnWidthSyncBehavior	SourceDataGrid="{Binding ElementName=dataGrid}"/>
@@ -203,8 +209,8 @@
 
 					<!--Первый уровень заголовков-->
 
-					<Border Grid.Column="0" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" BorderThickness="1,1,1,0">
+						<TextBlock>№ п/п</TextBlock>
 					</Border>
 					<Border Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Сведения об операции</TextBlock>
@@ -224,11 +230,11 @@
 					<Border Grid.Column="17" Grid.Row="0" Grid.ColumnSpan="9">
 						<TextBlock>Характеристика ЖРО</TextBlock>
 					</Border>
-					<Border Grid.Column="26" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="26" Grid.Row="0" Grid.RowSpan="3" BorderThickness="1,1,1,0">
+						<TextBlock>Субсидия, %</TextBlock>
 					</Border>
-					<Border Grid.Column="27" Grid.Row="0">
-						<TextBlock></TextBlock>
+					<Border Grid.Column="27" Grid.Row="0" Grid.RowSpan="3" BorderThickness="1,1,1,0">
+						<TextBlock>Номер мероприятия ФЦП</TextBlock>
 					</Border>
 					<Border Grid.Column="28" Grid.Row="0">
 						<TextBlock>Договор</TextBlock>
@@ -236,92 +242,170 @@
 
 					<!--Второй уровень заголовков-->
 
-					<Border Grid.Column="0" Grid.Row="1">
-						<TextBlock>№ п/п</TextBlock>
+					<Border Grid.Column="0" Grid.Row="1" BorderThickness="1,0,1,0">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="1" Grid.Row="1">
+					<Border Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>код</TextBlock>
 					</Border>
-					<Border Grid.Column="2" Grid.Row="1">
+					<Border Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>дата</TextBlock>
 					</Border>
-					<Border Grid.Column="3" Grid.Row="1">
+					<Border Grid.Column="3" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>индивидуальный номер (идентификационный код) партии ЖРО</TextBlock>
 					</Border>
-					<Border Grid.Column="4" Grid.Row="1">
+					<Border Grid.Column="4" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>номер паспорта</TextBlock>
 					</Border>
-					<Border Grid.Column="5" Grid.Row="1">
+					<Border Grid.Column="5" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>объем, куб. м</TextBlock>
 					</Border>
-					<Border Grid.Column="6" Grid.Row="1">
+					<Border Grid.Column="6" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>масса, т</TextBlock>
 					</Border>
-					<Border Grid.Column="7" Grid.Row="1">
+					<Border Grid.Column="7" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>солесодержание, г/л</TextBlock>
 					</Border>
-					<Border Grid.Column="8" Grid.Row="1">
-						<TextBlock>наименование радионуклида</TextBlock>
+					<Border Grid.Column="8" Grid.Row="1" Grid.ColumnSpan="2">
+						<TextBlock>радионуклидный состав</TextBlock>
 					</Border>
-					<Border Grid.Column="9" Grid.Row="1">
-						<TextBlock>удельная активность, БК/г</TextBlock>
-					</Border>
-					<Border Grid.Column="10" Grid.Row="1">
+					<Border Grid.Column="10" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>вид</TextBlock>
 					</Border>
-					<Border Grid.Column="11" Grid.Row="1">
+					<Border Grid.Column="11" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>номер</TextBlock>
 					</Border>
-					<Border Grid.Column="12" Grid.Row="1">
+					<Border Grid.Column="12" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>дата</TextBlock>
 					</Border>
-					<Border Grid.Column="13" Grid.Row="1">
+					<Border Grid.Column="13" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>поставщика или получателя</TextBlock>
 					</Border>
-					<Border Grid.Column="14" Grid.Row="1">
+					<Border Grid.Column="14" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>перевозчика</TextBlock>
 					</Border>
-					<Border Grid.Column="15" Grid.Row="1">
+					<Border Grid.Column="15" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>наименование</TextBlock>
 					</Border>
-					<Border Grid.Column="16" Grid.Row="1">
+					<Border Grid.Column="16" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>код</TextBlock>
 					</Border>
-					<Border Grid.Column="17" Grid.Row="1">
+					<Border Grid.Column="17" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>код</TextBlock>
 					</Border>
-					<Border Grid.Column="18" Grid.Row="1">
+					<Border Grid.Column="18" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>статус</TextBlock>
 					</Border>
-					<Border Grid.Column="19" Grid.Row="1">
+					<Border Grid.Column="19" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>объем, куб. м</TextBlock>
 					</Border>
-					<Border Grid.Column="20" Grid.Row="1">
+					<Border Grid.Column="20" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>масса, т</TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="1">
-						<TextBlock>тритий</TextBlock>
+					<Border Grid.Column="21" Grid.Row="1" Grid.ColumnSpan="4">
+						<TextBlock>суммарная активность, Бк</TextBlock>
 					</Border>
-					<Border Grid.Column="22" Grid.Row="1">
-						<TextBlock>бета-, гамма-излучающие радионуклиды (исключая</TextBlock>
-					</Border>
-					<Border Grid.Column="23" Grid.Row="1">
-						<TextBlock>альфа-излучающие радионуклиды (исключая</TextBlock>
-					</Border>
-					<Border Grid.Column="24" Grid.Row="1">
-						<TextBlock>трансурановые радионуклиды</TextBlock>
-					</Border>
-					<Border Grid.Column="25" Grid.Row="1">
+					<Border Grid.Column="25" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>код переработки/сортировки РАО</TextBlock>
 					</Border>
-					<Border Grid.Column="26" Grid.Row="1">
-						<TextBlock>Субсидия, %</TextBlock>
+					<Border Grid.Column="26" Grid.Row="1" BorderThickness="1,0,1,0">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="27" Grid.Row="1">
-						<TextBlock>Номер мероприятия ФЦП</TextBlock>
+					<Border Grid.Column="27" Grid.Row="1" BorderThickness="1,0,1,0">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="28" Grid.Row="1">
+					<Border Grid.Column="28" Grid.Row="1" Grid.RowSpan="2" BorderThickness="1,1,1,0">
 						<TextBlock>номер</TextBlock>
+					</Border>
+
+					<!--Третий уровень заголовков-->
+
+					<Border Grid.Column="0" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="1" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="2" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="3" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="4" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="5" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="6" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="7" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="8" Grid.Row="2">
+						<TextBlock>наименование радионуклида</TextBlock>
+					</Border>
+					<Border Grid.Column="9" Grid.Row="2">
+						<TextBlock>удельная активность, Бк/г</TextBlock>
+					</Border>
+					<Border Grid.Column="10" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="11" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="12" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="13" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="14" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="15" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="16" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="17" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="18" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="19" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="20" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="21" Grid.Row="2">
+						<TextBlock>тритий</TextBlock>
+					</Border>
+					<Border Grid.Column="22" Grid.Row="2">
+						<TextBlock>бета-, гамма-излучающие радионуклиды(исключая тритий)</TextBlock>
+					</Border>
+					<Border Grid.Column="23" Grid.Row="2">
+						<TextBlock>альфа-излучающие радионуклиды (исключая трансурановые)</TextBlock>
+					</Border>
+					<Border Grid.Column="24" Grid.Row="2">
+						<TextBlock>трансурановые радионуклиды</TextBlock>
+					</Border>
+					<Border Grid.Column="25" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="26" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="27" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="28" Grid.Row="2" BorderThickness="1,0,1,1">
+						<TextBlock></TextBlock>
 					</Border>
 				</Grid>
 
@@ -334,10 +418,10 @@
 					SelectedItem="{Binding SelectedForm}">
 
                     <interactivity:Interaction.Behaviors>
-						<local:DataGridDragSelectionBehavior/>
 						<local:DataGridPointerBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
+						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
 					</interactivity:Interaction.Behaviors>
 
 					<DataGrid.Columns>
@@ -931,8 +1015,6 @@
 							  SelectedItem="{Binding SelectedNote}">
 
 						<interactivity:Interaction.Behaviors>
-							<local:DataGridDoubleClickBehavior/>
-							<local:DataGridDragSelectionBehavior/>
 							<local:DataGridPointerBehavior/>
 							<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
