--- a/Client_App/Views/Forms/Forms1/Form_19.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_19.axaml
@@ -55,25 +55,31 @@
                 <Border Classes="borderContainer">
                     <Grid Margin="5" RowDefinitions="*,*,*,*,*">
 
-                        <Grid ColumnDefinitions="*,*,*"  Grid.Row="0">
-						    <TextBlock Grid.Column="0" Margin="5" >Дата окончания предыдущего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" Text="{Binding Report.StartPeriod.Value}"/>
-						    <CalendarDatePicker Classes="buttonOnly"  
-								Grid.Column="2"
-                                SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"
-                                Watermark="дд.мм.гггг"/>
-					    </Grid>
+						<Grid ColumnDefinitions="*,*,*" Grid.Row="0">
+							<TextBlock Grid.Column="0"
+									   Margin="5,11"
+									   Text="Дата окончания предыдущего отчетного периода:"/>
+							<TextBox Grid.Column="1"
+									 Text="{Binding Report.StartPeriod.Value}"
+									 MinWidth="83"
+									 Watermark="дд.мм.гггг"/>
+							<CalendarDatePicker	Classes="buttonOnly"
+								                Grid.Column="2"
+								                SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
+						</Grid>
 
-					    <Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
-						    <TextBlock Grid.Column="0" Margin="5" >Дата окончания настоящего отчетного периода:</TextBlock>
-							<TextBox Grid.Column="1" 
-                                Margin="10.5,3,0,0"
-								Text="{Binding Report.EndPeriod.Value}"/>
-						    <CalendarDatePicker Classes="buttonOnly"  
-                                Grid.Column="2" 
-                                SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"
-                                Watermark="дд.мм.гггг"/>
-					    </Grid>
+						<Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
+							<TextBlock Grid.Column="0"
+									   Margin="5,13"
+									   Text="Дата окончания настоящего отчетного периода:"/>
+							<TextBox Grid.Column="1"
+									 Margin="11,3,0,0"
+									 Text="{Binding Report.EndPeriod.Value}"
+									 Watermark="дд.мм.гггг"/>
+							<CalendarDatePicker Classes="buttonOnly"
+								                Grid.Column="2"
+								                SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"								/>
+						</Grid>
 
 					    <StackPanel  Orientation="Horizontal" Grid.Row="2">
 						    <TextBlock Margin="5">Номер корректировки:</TextBlock>
@@ -202,8 +208,8 @@
 
                     <!--Первый уровень заголовков-->
 
-                    <Border Grid.Column="0" Grid.Row="0">
-                        <TextBlock></TextBlock>
+                    <Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+                        <TextBlock>№ п/п</TextBlock>
                     </Border>
                     <Border Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">
                         <TextBlock>Сведения об операции</TextBlock>
@@ -211,8 +217,8 @@
                     <Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="3">
                         <TextBlock>Документ</TextBlock>
                     </Border>
-                    <Border Grid.Column="6" Grid.Row="0">
-                        <TextBlock></TextBlock>
+                    <Border Grid.Column="6" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1,1,1,0">
+                        <TextBlock>Код типа объектов учета</TextBlock>
                     </Border>
                     <Border Grid.Column="7" Grid.Row="0" Grid.ColumnSpan="2">
                         <TextBlock>Сведения о радиоактивных веществах</TextBlock>
@@ -220,8 +226,8 @@
 
                     <!--Второй уровень заголовков-->
 
-                    <Border Grid.Column="0" Grid.Row="1">
-                        <TextBlock>№ п/п</TextBlock>
+                    <Border Grid.Column="0" Grid.Row="1" BorderThickness="1,0,1,1">
+                        <TextBlock></TextBlock>
                     </Border>
                     <Border Grid.Column="1" Grid.Row="1">
                         <TextBlock>код</TextBlock>
@@ -238,8 +244,8 @@
                     <Border Grid.Column="5" Grid.Row="1">
                         <TextBlock>дата</TextBlock>
                     </Border>
-                    <Border Grid.Column="6" Grid.Row="1">
-                        <TextBlock>Код типа объектов учета</TextBlock>
+                    <Border Grid.Column="6" Grid.Row="1"  BorderThickness="1,0,1,1">
+                        <TextBlock></TextBlock>
                     </Border>
                     <Border Grid.Column="7" Grid.Row="1">
                         <TextBlock>радионуклиды</TextBlock>
@@ -258,10 +264,10 @@
                     SelectedItem="{Binding SelectedForm}">
 
                     <interactivity:Interaction.Behaviors>
-                        <local:DataGridDragSelectionBehavior/>
+						<local:DataGridPointerBehavior/>
                         <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
-					    <local:DataGridDoubleClickBehavior/>
 						<local:DeselectDataGridOnClickOutsideBehavior/>
+						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
 					</interactivity:Interaction.Behaviors>
 
                     <DataGrid.Columns>
